# hermes-handy-tools

./: .gitignore  AGENTS.md  PROJECT-GUIDELINES.md  README.md  pyproject.toml
.agents/: template-version.json
.agents/commands/: README.md  _common-branch-context.md  _common-branch-lifecycle.md  _common-branch-plan.md  _common-closing-gate.md  _common-git-steps.md  _common-github-ownership.md  _common-pr-feedback.md  _common-preflight.md  _common-review-context.md  _common-review-steps.md  auto.md  begin-workflow.md  begin-worktree.md  branch-breakdown.md  branch-refresh.md  branch-stack.md  commit-cleanup.md  create-pr.md  debt.md  goal.md  implement.md  issue.md  plan.md  rebase.md  review-archive.md  review-clarify.md  review-fetch.md  review-implement.md  review-loop.md  review-post.md  review-refresh.md  review-report.md  review-update.md  review-validate.md  review-verify.md  review.md  setup-project.md  worktree-cleanup.md  worktree-prune.md
.agents/docs/: guides.md
.agents/rules/: 001-agent-behavior.md  002-code-standards.md  003-testing.md  004-review-standards.md  005-project-structure.md  006-commits-and-prs.md  007-spec-design-standards.md  008-git-operations.md
.agents/scripts/: branch.py  branch_state.py  check-agents-consistency.py  cli_common.py  create-worktree.py  debt.py  gh.py  goal_trace.py  preflight-pr-body.py  preflight-pr.py  preflight-rebase.py  preflight-review.py  preflight-start.py  repo_guard.py  resolve-target-worktree.py  review-log.py  review_common.py  review_workflow.py  setup_project.py  setup_project_preflight.py  test_pr_body.py  test_repo_guard.py  update-commit-range.py  workflow_state.py
.agents/templates/: PR-body.md  REVIEW-template.md  REVIEW_LOG-template.md  design.md  goals.config.default.json  implementation-plan.md  inline-comment-body-snippet.md  inline-comment-format.json  review-body-snippet.md  skill.md  spec.md  task.md
.agents/templates/subproject-template/subproject-python/: AGENTS.md  Makefile  README.md  pyproject.toml
.agents/templates/subproject-template/subproject-python/docs/agents/: agent_rules.md
.agents/templates/subproject-template/subproject-python/docs/examples/: example_main.py
.agents/templates/subproject-template/subproject-python/sub_project/: __init__.py
.agents/templates/subproject-template/subproject-python/sub_project/modules/: __init__.py
.agents/templates/subproject-template/subproject-python/tests/integration/: test_integration.py
.agents/templates/subproject-template/subproject-python/tests/unit/: test_main.py
docs/: PLAN-web-ui-improvements.md  project_rules  templates
src/: README.md
src/hermes-devlog/: AGENTS.md  Makefile  README.md  pyproject.toml
src/hermes-devlog/hermes_devlog/: __init__.py  cli.py  custom_tool.py  errors.py  goal_service.py  models.py  phase_service.py  plugin.py  service.py  service_common.py  state_validation.py  store.py  validation.py  workflow_service.py
src/hermes-devlog/skills/: hermes-development-log.md
src/hermes-devlog/tests/: test_cli.py  test_coordinator.py  test_coordinator_extra1.py  test_coordinator_extra2.py  test_interfaces.py  test_interfaces_extra1.py  test_interfaces_extra2.py  test_interfaces_extra3.py  test_ledger_contract.py  test_mutable_ledger.py  test_plugin.py  test_schema_v2_integration.py
src/opencode-tool/: AGENTS.md  Makefile  README.md  pyproject.toml
src/opencode-tool/docs/: env-design.md  hitl-design.md  tmux-isolation-design.md
src/opencode-tool/opencode_tool/: __init__.py  api.py  auto_init.py  config.py  main.py  registry.py  tmux.py
src/opencode-tool/opencode_tool/commands/: cleaner.py  hitl.py  model.py  permission.py  profile.py  question.py  run.py  session.py  skills.py
src/opencode-tool/opencode_tool/skills/: __init__.py  cli-commands.md  opencode-developer.md  opencode-tool-commands.md  opencode-tool.md
src/opencode-tool/opencode_tool/skills/opencode-developer/: SKILL.md
src/opencode-tool/opencode_tool/skills/opencode-tool-cmd/: SKILL.md
src/opencode-tool/opencode_tool/skills/opencode-tool-quick-ref/: SKILL.md
src/planner/: AGENTS.md  Makefile  README.md  pyproject.toml
src/planner/docs/: CLI.md  DATA_MODEL.md  DESIGN.md  HERMES.md  WEBUI.md
src/planner/planner/: __init__.py  cli.py  db.py  models.py
src/planner/planner/web/: app.py
src/planner/planner/web/templates/: dashboard.html
(+99 files in other folders)
