[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-tool"
version = "0.1.0"
description = "Python CLI for OpenCode server management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "chris" }
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
opencode-tool = "opencode_tool.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["opencode_tool"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "D", "C901"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[lint.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.per-file-ignores]
"**/tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings --maxfail=2 --cov=opencode_tool --cov-report=html"

[tool.coverage.run]
source = ["opencode_tool"]
