[project]
name = "<subproject>"
version = "0.1.0"
description = "<description>"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest", "pytest-cov", "radon", "ruff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "D", "UP", "B", "SIM", "ARG", "LOG",
    "PT", "S", "PTH", "RUF", "C901",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=sub_project --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["sub_project"]
